--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -82,6 +82,25 @@
     {% for post in posts %}
     <div class="bg-white p-4 rounded-lg shadow-md">
       <!-- Post content -->
+      {% if post.edit_mode %}
+      <form
+        action="{% url 'editpost' post.id %}"
+        method="POST"
+        enctype="multipart/form-data"
+      >
+        {% csrf_token %}
+        <textarea name="text" class="w-full px-4 py-2 border rounded-md">
+{{ post.content_text }}</textarea
+        >
+        <input type="file" name="picture" class="mt-2" />
+        <button
+          type="submit"
+          class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
+        >
+          Save
+        </button>
+      </form>
+      {% else %}
       <p>{{ post.content_text }}</p>
       {% if post.content_image %}
       <img
@@ -95,11 +114,16 @@
       {% if post.creater == request.user %}
       <div class="flex justify-end space-x-4 mt-4">
         <!-- Edit Button -->
-        <a
-          href="{% url 'editpost' post.id %}"
-          class="px-4 py-2 bg-yellow-500 text-white rounded-md hover:bg-yellow-600"
-          >Edit</a
-        >
+        <form action="{% url 'editpost' post.id %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="edit_mode" value="true" />
+          <button
+            type="submit"
+            class="px-4 py-2 bg-yellow-500 text-white rounded-md hover:bg-yellow-600"
+          >
+            Edit
+          </button>
+        </form>
 
         <!-- Delete Button -->
         <form
@@ -116,7 +140,7 @@
           </button>
         </form>
       </div>
-      {% endif %}
+      {% endif %} {% endif %}
     </div>
     {% endfor %}
   </div>
