--- a/network/templates/network/layout2.html
+++ b/network/templates/network/layout2.html
@@ -11,6 +11,11 @@
   </head>
   <body class="bg-gray-100">
     <div class="flex flex-col items-center justify-center min-h-screen">
+      {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-info">{{ message }}</div>
+    {% endfor %}
+      {% endif %}
       <div class="text-center mb-10">
         <h3 class="text-3xl font-bold">{{ title }}</h3>
       </div>
