--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Network{% endblock %}</title>
+    <title>{% block title %}Trendy{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'style.css' %}"/>
   </head>
@@ -12,8 +12,8 @@
     <div class="flex flex-grow h-screen">
       <div class="w-1/4 bg-white p-4 shadow-md flex flex-col justify-between">
         <div>
-          <img src="{% static 'network/logo.png' %}" alt="Logo" class="w-24 h-24 mx-auto mb-8"/>
-          <div class="space-y-4 text-center">
+          <img src="{% static 'logo.png' %}" alt="Logo" class="w-[85%] h-10 mx-auto mb-10"/>
+          <div class="space-y-4 text-center mt-16">
             <a href="{% url 'index' %}" class="text-blue-500 hover:underline block" >All Posts</a>
             {% if user.is_authenticated %}
             <a href="{% url 'following' %}" class="text-blue-500 hover:underline block" >Following</a>
