--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,26 +1,24 @@
-{% extends "network/layout.html" %} 
-{% load static %} 
+{% extends "network/layout.html" %}
+{% load static %}
+
 {% block body %}
 <div class="main-div">
   <div class="left-div">
     <nav class="head text-xl font-bold">
-      {% if page == 'all_posts' %} 
-        All Posts 
+      {% if page == 'all_posts' %}
+        All Posts
       {% elif page == 'following' %}
-        Following 
-      {% elif page == 'saved' %} 
-        Saved 
+        Following
       {% elif page == 'profile' %}
-        Profile 
-      {% else %} 
-        Explore 
+        Profile
+      {% else %}
+        Explore
       {% endif %}
     </nav>
     <div class="left-div-content">
       <div class="posts-view">
         {% block profile %}{% endblock %}
-        
-        <!-- Render posts only if the page is NOT the profile page -->
+
         {% if page != 'profile' %}
         <div class="main-div-content">
           {% for post in posts %}
@@ -38,12 +36,12 @@
                 <div class="flex justify-between items-center">
                   <div>
                     <a href="{% url 'profile' post.creater.username %}">
-                      <span class="font-bold">{{post.creater.first_name}}  {{post.creater.last_name}}</span>
+                      <span class="font-bold">{{ post.creater.first_name }} {{ post.creater.last_name }}</span>
                     </a>
                     <a href="{% url 'profile' post.creater.username %}">
                       <span class="text-gray-500">&nbsp;@{{ post.creater.username }}</span>
                     </a>
-                    <span class="grey">&nbsp;&middot;&nbsp;&nbsp;{{post.date_created | date:"P M d Y"}}</span>
+                    <span class="grey">&nbsp;&middot;&nbsp;&nbsp;{{ post.date_created | date:"P M d Y" }}</span>
                   </div>
                 </div>
                 <div class="text-gray-800 mt-2">
@@ -53,13 +51,58 @@
                 <div class="mt-3 w-full h-64 bg-cover bg-center rounded-lg" style="background-image: url(/media/{{ post.content_image }});"></div>
                 {% endif %}
                 <div class="flex space-x-4 mt-3">
-                  <div class="flex items-center space-x-1 cursor-pointer" onclick="like_post(this)" data-post_id="{{ post.id }}">
-                    <x-heroicon-o-heart class="w-5 h-5 text-gray-500" />
-                    <div>{{ post.likers.count }}</div>
-                  </div>
-                  <div class="flex items-center space-x-1 cursor-pointer" onclick="show_comment(this)">
-                    <x-heroicon-o-chat class="w-5 h-5 text-gray-500" />
-                    <div>{{ post.comment_count }}</div>
+                  <!-- Like functionality -->
+                  <form method="post" action="{% url 'toggle_like' post.id %}" class="inline">
+                    {% csrf_token %}
+                    <button type="submit" class="text-gray-500 hover:text-red-500">
+                      {% if user in post.likers.all %}
+                        <i class="fa fa-heart text-red-500"></i>
+                      {% else %}
+                        <i class="fa fa-heart"></i>
+                      {% endif %}
+                    </button>
+                  </form>
+                  <span>{{ post.likers.count }}</span>
+
+                  <!-- Comment functionality -->
+                  <a href="#commentSection{{ post.id }}" class="text-gray-500 hover:text-blue-500">
+                    <i class="fa fa-comment"></i>
+                  </a>
+                  <span>{{ post.comment_count }}</span>
+                </div>
+
+                <!-- Comment Section -->
+                <div id="commentSection{{ post.id }}" class="comments-section mt-4">
+                  <form method="post" action="{% url 'comments' post.id %}">
+                    {% csrf_token %}
+                    <textarea
+                      name="comment_text"
+                      rows="4"
+                      class="w-full p-2 border rounded-lg focus:outline-none focus:ring focus:border-blue-300"
+                      placeholder="Write your comment here..."
+                    ></textarea>
+                    <div class="mt-4 flex justify-end space-x-2">
+                      <a href="#commentSection{{ post.id }}" class="px-4 py-2 bg-gray-500 text-white rounded-lg">Cancel</a>
+                      <button
+                        type="submit"
+                        class="px-4 py-2 bg-blue-500 text-white rounded-lg"
+                      >
+                        Submit
+                      </button>
+                    </div>
+                  </form>
+
+                  <!-- Display Comments below the post -->
+                  <div class="mt-4">
+                    {% for comment in post.comments.all %}
+                    <div class="comment mb-2">
+                      <strong>{{ comment.commenter.first_name }} {{ comment.commenter.last_name }}</strong> 
+                      <span class="text-gray-500">{{ comment.comment_time|date:"P M d, Y" }}</span>
+                      <p>{{ comment.comment_content }}</p>
+                    </div>
+                    {% empty %}
+                    <p>No comments yet. Be the first to comment!</p>
+                    {% endfor %}
                   </div>
                 </div>
               </div>
@@ -67,7 +110,7 @@
           </div>
           {% empty %}
           <center>
-            <strong class="text-lg">Sorry! No one has posted anything yet.</strong >
+            <strong class="text-lg">Sorry! No one has posted anything yet.</strong>
             <div class="text-gray-500 text-sm">When they do, their posts will show up here.</div>
           </center>
           {% endfor %}
