--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Trendy{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'style.css' %}"/>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body class="bg-gray-100 min-h-screen flex flex-col">
     <div class="flex flex-grow h-screen">
@@ -17,9 +19,13 @@
             <a href="{% url 'index' %}" class="text-blue-500 hover:underline block" >All Posts</a>
             {% if user.is_authenticated %}
             <a href="{% url 'following' %}" class="text-blue-500 hover:underline block" >Following</a>
-            <a href="{% url 'saved' %}" class="text-blue-500 hover:underline block" >Saved</a>
             <a href="{% url 'profile' user.username %}" class="text-blue-500 hover:underline block" >Profile</a>
+            <a href="{% url 'user_activity_chart' %}" 
+               class="text-blue-500 hover:underline block">
+               User Activity Chart
+            </a>
             <a href="{% url 'logout' %}" class="text-blue-500 hover:underline block" >Logout</a>
+          
             <a href="#createPostModal" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 block">Create Post</a>
             {% else %}
             <a href="{% url 'login' %}" class="text-blue-500 hover:underline block" >Login</a>
@@ -48,7 +54,7 @@
             <div class="relative">
               <input type="text" name="q" placeholder="Search Network" class="w-full p-2 border border-gray-300 rounded-md"/>
               <button type="submit" class="absolute right-2 top-2 text-gray-500">
-                <i class="fa-search"></i>
+                <i class="fa fa-search"></i>
               </button>
             </div>
           </form>
@@ -96,6 +102,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal for creating post -->
     <div id="createPostModal" class="modal">
       <div class="modal-content">
         <h2 class="text-lg font-bold">Create Post</h2>
