--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -2,7 +2,6 @@
 
 {% block profile %}
 <div class="w-full">
-  <!-- Cover and Profile Picture -->
   <div class="h-48 bg-cover bg-center" style="background-image: url(/media/{{ username.cover }});"></div>
   <div class="flex flex-col items-center -mt-16">
     <div class="w-32 h-32 bg-cover bg-center rounded-full border-4 border-white" style="background-image: url(/media/{{ username.profile_pic }});"></div>
@@ -19,7 +18,6 @@
       <div class="text-gray-500 mb-4">
         <i class="far fa-calendar-alt"></i> &nbsp; Joined {{ username.date_joined|date:"F Y" }}
       </div>
-      <!-- Stats with Modal Links -->
       <div class="flex space-x-8 text-center">
         <div>
           <strong class="text-xl">{{ posts_count }}</strong><br />
@@ -47,10 +45,21 @@
   {% if posts %}
     <div class="grid gap-4">
       {% for post in posts %}
-        <div class="bg-white p-4 rounded-lg shadow-md">
+        <div class="bg-white p-4 rounded-lg shadow-md relative">
           <p>{{ post.content_text }}</p>
           {% if post.content_image %}
             <img src="/media/{{ post.content_image }}" class="w-full mt-2 rounded-md" alt="Post Image"/>
+          {% endif %}
+          {% if user.is_authenticated and user == post.creater %}
+          <form action="{% url 'deletepost' post.id %}" method="POST" class="absolute right-2 mt-8">
+            {% csrf_token %}
+            <button 
+              type="submit" 
+              class="bg-red-500 hover:bg-red-700 text-white font-semibold py-2 px-4 rounded-lg shadow-md transform hover:scale-105 transition-all duration-200 ease-in-out" 
+              onclick="return confirm('Are you sure you want to delete this post?');">
+              Delete Post
+            </button>
+          </form>
           {% endif %}
         </div>
       {% endfor %}
